swagger other endpoints
